# bazel-external-data

./: .external_data_cli_proxy.py  .travis.yml  BUILD.bazel  WORKSPACE  bazel_repo_proxy.py  external_data.bzl  extract_archive.bzl
bazel_external_data/: BUILD.bazel  cli.py  core.py  extract.py  squash.py  upload.py  util.py
bazel_external_data/backends/: BUILD.bazel  girder.py
bazel_external_data/backends/test/: girder_test.py
bazel_external_data/backends/test/docker_girder/: docker-compose.yml  run.sh  setup_server.py
docs/: workflows.md
test/: BUILD.bazel  copy_and_test.sh  eval.sh  external_data_workspace_test.bzl  meta_test.bzl  run_tests.sh  workflows_test.sh  workspace_test.bzl
test/external_data_pkg_test/: .external_data.yml  BUILD.bazel  WORKSPACE  drake_path.bzl  repo_example.bzl  test_basics.py  test_repo_example.py  workflows_test.sh
test/external_data_pkg_test/data/: BUILD.bazel  archive.bzl  archive.py  test_data.tar.gz.bzl  test_data.tar.gz.manifest.bzl  test_data.tar.gz.sha512
test/external_data_pkg_test/mock/master_files/: Untitled.ipynb
test/external_data_pkg_test/tools/: external_data.bzl
test/pkgs/: WORKSPACE
