# -*- python -*-
load(":workspace_test.bzl", "workspace_test")

workspace_test(
    name = "workflows_test",
    workspace = "bazel_pkg_advanced_test",
    cmd = "./workflows_test.sh",
)

workspace_test(
    name = "bazel_pkg_test",
)

workspace_test(
    name = "bazel_pkg_advanced_test",
)

workspace_test(
    name = "bazel_pkg_downstream_test",
    workspace_deps = [
        "bazel_pkg_test",
    ],
)
