# -*- python -*-
load(":workspace_test.bzl", "workspace_test")

workspace_test(
    name = "workflows_test",
    cmd = "./workflows_test.sh",
    workspace = ":workspaces/bazel_pkg_advanced_test",
    data = ["//:root_data"],
)

workspace_test(
    name = "bazel_pkg_test",
    workspace = ":workspaces/bazel_pkg_test",
    data = ["//:root_data"],
)

workspace_test(
    name = "bazel_pkg_advanced_test",
    workspace = ":workspaces/bazel_pkg_advanced_test",
    data = ["//:root_data"],
)

workspace_test(
    name = "bazel_pkg_downstream_test",
    workspace = ":workspaces/bazel_pkg_downstream_test",
    data = [
        ":workspaces/bazel_pkg_test",
        "//:root_data",
    ],
)
