# -*- python -*-


load("//tools/external_data:expose_all_files.bzl", "expose_all_files")


# Use relative package path, as `py_library` does not like absolute package
# paths. This ensures that `//src` is added to `PYTHONPATH`.
imports = ["../.."]

py_library(
    name = "core",
    srcs = [
        "__init__.py",
        "mock.py",
    ],
    deps = [
        "//src/bazel_external_data:core",
    ],
    imports = imports,
)

py_library(
    name = "backends",
    deps = [
        ":core",
    ],
    imports = imports,
    visibility = ["//src/bazel_external_data:__subpackages__"],
)


expose_all_files()
