# -*- python -*-

load("@bazel_external_data_pkg//:expose_all_files.bzl", "expose_all_files")

exports_files(
    srcs = [".external_data.yml"],
    visibility = ["//:__subpackages__"],
)

py_test(
    name = "test_basics",
    size = "small",
    srcs = ["test_basics.py"],
    data = [
        "mock",  # Directory.
        "//data",
        "@repo_archive//:data",
    ],
    visibility = ["//visibility:public"],
)

expose_all_files(
    sub_dirs = ["mock"],
    sub_packages = [
        "data",
        "tools",
    ],
)
