# -*- python -*-

load("//tools:external_data.bzl",
    "external_data",
    "external_data_group",
    "get_original_files",
)

load("@bazel_external_data_pkg//:expose_all_files.bzl", "expose_all_files")

package(default_visibility = ["//visibility:public"])

external_data(
    file = "basic.bin",
)

external_data_group(
    name = "glob",
    files = get_original_files(glob(['glob_*.bin.sha512'])),
)

external_data(
    file = "subdir/extra.bin",
)

filegroup(
    name = "data",
    srcs = [
        ":basic.bin",
        ":glob",
        ":subdir/extra.bin",
    ],
)

expose_all_files(
    sub_dirs = ["subdir"],
)

external_data(
    file = "test_data.tar.gz",
)

py_binary(
    name = "archive",
    srcs = ["archive.py"],
)

# Extract tarfile.
load(":archive.bzl", "extract_archive")
load(":test_data.tar.gz.manifest.bzl", test_data_manifest="manifest")
extract_archive(
    name = "test_data",
    archive = "test_data.tar.gz",
    manifest = test_data_manifest,
    strip_prefix = "test_data/",
    output_dir = "test_data_other",
)
